# autoresearch-skfolio

./: README.md  SKILL.md  dsr.py  prepare.py  program.md  pyproject.toml  results.tsv  train.py
