
[project]
name = "autoresearch-skfolio"
version = "0.1.0"
description = "Autonomous portfolio research with skfolio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "skfolio>=0.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "scipy>=1.17.1",
]
